input file custom style

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
   <div class="wrapper">
     <label for="file-upload">
-      <input class="file-upload__input" type="file" id="file">
+      <input class="file-upload__input" type="file" name="file-upload" id="file-upload">
       <span class="file-upload__button">Choose File</span>
       <span class="file-upload__label">File is not chosen</span>
     </label>
-
   </div>
+
 </body>
 
 </html>
