--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Input File styling</title>
+  <title>Spending Chart</title>
   <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js" defer></script>
 </head>
 
 <body>
-  <div class="wrapper">
-    <label for="file-upload">
-      <input class="file-upload__input" type="file" name="file-upload" id="file-upload">
-      <span class="file-upload__button">Choose File</span>
-      <span class="file-upload__label">File is not chosen</span>
-    </label>
-  </div>
 
 </body>
 
