--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spending Chart</title>
   <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.js" defer>
   <script src="js/script.js" defer></script>
 </head>
 
 <body>
+  <div class="content">
+    <div class="tabs" id="tabs-container"></div>
+    <div class="swiper slider">
+      <div class="swiper-slider" id="slider-container">
+        <!--  -->
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
 
 </body>
 
