--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
-
+  <dl class="chars">
+    <div class="chars__item">
+      <dt class="chars__term">Экран</dt>
+      <dd class="chars__val">6.72"/2400x1080 Пикс</dd>
+    </div>
+    <div class="chars__item">
+      <dt class="chars__term">Процессор</dt>
+      <dd class="chars__val">6Mediatek Helio G88 2 ГГц</dd>
+    </div>
+    <div class="chars__item">
+      <dt class="chars__term">Оперативная память</dt>
+      <dd class="chars__val">6Mediatek Helio G88 2 ГГц 6Mediatek Helio G88 2 ГГц</dd>
+    </div>
+    <div class="chars__item">
+      <dt class="chars__term">Встроенная память (ROM)</dt>
+      <dd class="chars__val">128 ГБ</dd>
+    </div>
+  </dl>
 </body>
 
 </html>
