card equal height

--- a/index.html
+++ b/index.html
@@ -12,7 +12,62 @@
 </head>
 
 <body>
-
+  <ul class="cards">
+    <li class="cards__item">
+      <article class="card">
+        <div class="card__image">
+          <img src="https://picsum.photos/200/300" alt="Image alt text">
+        </div>
+        <div class="card__content">
+          <h3 class="card__title">Card Title here</h3>
+          <p class="card__descr">
+            Lorem ipsum dolor sit amet.
+          </p>
+          <button class="card__btn">More</button>
+        </div>
+      </article>
+    </li>
+    <li class="cards__item">
+      <article class="card">
+        <div class="card__image">
+          <img src="https://picsum.photos/200/300" alt="Image alt text">
+        </div>
+        <div class="card__content">
+          <h3 class="card__title">Card Title here</h3>
+          <p class="card__descr">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas pariatur assumenda incidunt libero. Ab, non.
+          </p>
+          <button class="card__btn">More</button>
+        </div>
+      </article>
+    </li>
+    <li class="cards__item">
+      <article class="card">
+        <div class="card__image">
+          <img src="https://picsum.photos/200/300" alt="Image alt text">
+        </div>
+        <div class="card__content">
+          <h3 class="card__title">Card Title here</h3>
+          <button class="card__btn">More</button>
+        </div>
+      </article>
+    </li>
+    <li class="cards__item">
+      <article class="card">
+        <div class="card__image">
+          <img src="https://picsum.photos/200/300" alt="Image alt text">
+        </div>
+        <div class="card__content">
+          <h3 class="card__title">Card Title here</h3>
+          <p class="card__descr">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt praesentium molestias iusto dolor quasi.
+            Velit ipsum dolorem harum? Eveniet deleniti blanditiis natus corporis repudiandae quae.
+          </p>
+          <button class="card__btn">More</button>
+        </div>
+      </article>
+    </li>
+  </ul>
 </body>
 
 </html>
