--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
-
+  <div class="ticker">
+    <div class="ticker__wrapper">
+      <div class="ticker__item">Ticker-animation</div>
+      <div class="ticker__item">Ticker-animation</div>
+      <div class="ticker__item">Ticker-animation</div>
+      <div class="ticker__item">Ticker-animation</div>
+      <div class="ticker__item">Ticker-animation</div>
+    </div>
+  </div>
 </body>
 
 </html>
