--- a/index.html
+++ b/index.html
@@ -6,31 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="./img/svg/javascript.svg" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Burger menu</title>
+  <title>Spending Chart</title>
   <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js" defer></script>
 </head>
 
-<body class="page__body">
-  <header class="header">
-    <div class="container header__container">
-      <a href="#" class="logo">Logo</a>
-      <nav class="nav" data-nav>
-        <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">NavLink1</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">NavLink2</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">NavLink3</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">NavLink4</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">NavLink5</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">NavLink6</a></li>
-        </ul>
-      </nav>
-      <button class="burger" data-burger aria-label="Open menu" aria-expanded="false">
-        <span class="burger__line"></span>
-      </button>
-    </div>
-  </header>
+<body>
 
 </body>
 
