--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./img/svg/javascript.svg" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spending Chart</title>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="./img/svg/javascript.svg" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Template</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/font-face.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
-  </head>
+  <script src="js/script.js" defer></script>
+</head>
 
-  <body>
-    <div class="content">
-      <div class="left"></div>
-      <div class="right"></div>
-    </div>
-    <div class="content">some text to check left padding on mobiles</div>
-  </body>
+<body>
+
+</body>
+
 </html>
