--- a/index.html
+++ b/index.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="./img/svg/javascript.svg" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./img/svg/javascript.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Template</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/font-face.css" />
     <link rel="stylesheet" href="css/style.css" />
-  <script src="js/script.js" defer></script>
-</head>
+    <script src="js/script.js" defer></script>
+  </head>
 
-<body>
-
-</body>
-
+  <body>
+    <ul class="menu list-reset">
+      <li class="menu__item">
+        <button class="menu__btn">Point 1</button>
+        <div class="dropdown">
+          <ul class="dropdown__list list-reset">
+            <li class="dropdown__item">
+              <a href="#" class="dropdown__link">Sub-point 1</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="#" class="dropdown__link">Sub-point 2</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="menu__item">
+        <button class="menu__btn">Point 2</button>
+        <div class="dropdown">
+          <ul class="dropdown__list list-reset">
+            <li class="dropdown__item">
+              <a href="#" class="dropdown__link">Sub-point 1</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="#" class="dropdown__link">Sub-point 2</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="#" class="dropdown__link">Sub-point 3</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="menu__item">
+        <button class="menu__btn">Point 3</button>
+        <div class="dropdown">
+          <ul class="dropdown__list list-reset">
+            <li class="dropdown__item">
+              <a href="#" class="dropdown__link">Sub-point 1</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+  </body>
 </html>
